--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 
+##### JACKSON ################
 spring.jackson.deserialization.fail-on-unknown-properties=true
-
 spring.jackson.date-format=yyyy-MM-dd
+
+
