Profile prod heroku

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,3 +1,7 @@
  moneyApi.security.enable-https=true
  
- #moneyApi.origem-permitida=
+ spring.datasource.url={JDBC_DATABASE_URL}
+spring.datasource.username={JDBC_DATABASE_USER}
+spring.datasource.password={JDBC_DATABASE_PASSWORD}
+
+moneyApi.origem-permitida=https://money-api.herokuapp.com
