--- a/pom.xml
+++ b/pom.xml
@@ -64,10 +64,10 @@
 			<artifactId>hibernate-java8</artifactId>
 		</dependency>
 
-		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-jpamodelgen</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.hibernate</groupId> -->
+<!-- 			<artifactId>hibernate-jpamodelgen</artifactId> -->
+<!-- 		</dependency> -->
 
 		<!-- Suporte do Jackson para as datas do Java 8 -->
 		<dependency>
@@ -120,6 +120,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
