--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -4,4 +4,4 @@
 spring.datasource.username={JDBC_DATABASE_USER}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
-moneyApi.origem-permitida=https://money-angular.herokuapp.com
+moneyApi.origem-permitida=https://money-app-api.herokuapp.com/
